--- a/app.json
+++ b/app.json
@@ -1,15 +1,14 @@
 {
   "pages": [
-   
     "pages/weather/weather",
     "pages/mortgage/mortgage",
     "pages/setting/setting",
     "pages/finance/func/func",
     "pages/finance/finance",
     "pages/wuxian-yijin/wxyj",
-    "pages/logs/logs",
     "pages/mortgage/detail/detail",
-    "pages/citychoose/citychoose"
+    "pages/citychoose/citychoose",
+    "pages/about/about"
   ],
   "window": {
     "navigationBarTextStyle": "white",
@@ -55,6 +54,7 @@
       "desc": "你的位置信息将用于小程序位置接口的效果展示"
     }
   },
+  "lazyCodeLoading": "requiredComponents",
   "requiredPrivateInfos": [
     "getLocation"
   ],
