--- a/app.json
+++ b/app.json
@@ -1,6 +1,5 @@
 {
   "pages": [
- 
     "pages/weather/weather",
     "pages/mortgage/mortgage",
     "pages/setting/setting",
@@ -9,7 +8,8 @@
     "pages/wuxian-yijin/wxyj",
     "pages/mortgage/detail/detail",
     "pages/citychoose/citychoose",
-    "pages/about/about"
+    "pages/about/about",
+    "pages/weather/days30/days30"
   ],
   "window": {
     "navigationBarTextStyle": "white",
