feat: 天气预报&天气查询

--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
     "pages/finance/finance",
     "pages/wuxian-yijin/wxyj",
     "pages/mortgage/detail/detail",
-    "pages/citychoose/citychoose",
+    "pages/weather/city/city",
     "pages/about/about",
     "pages/weather/days30/days30"
   ],
